recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:7: error: Double does not take parameters
    gauche(angle())
                ^